<android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gestures"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeOffset="800"
    android:gestureStrokeType="multiple" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Localizacion" >

        <TextView
            android:id="@+id/titulo"
            style="@style/TextoAsteroides"
            android:text="@string/Titulo" />

        <Button
            android:id="@+id/btJugar"
            style="@style/TextoAsteroides.Botones"
            android:onClick="lanzarJuego"
            android:text="@string/Arrancar" />

        <Button
            android:id="@+id/btPreferencias"
            style="@style/TextoAsteroides.Botones"
            android:onClick="lanzarPreferencias"
            android:text="@string/Configuracion" />

        <Button
            android:id="@+id/btAcercaDe"
            style="@style/TextoAsteroides.Botones"
            android:onClick="lanzarAcercaDe"
            android:text="@string/Informacion" />

        <Button
            android:id="@+id/btPuntuaciones"
            style="@style/TextoAsteroides.Botones"
            android:layout_height="wrap_content"
            android:onClick="lanzarPuntuaciones"
            android:text="@string/Puntuar" />

        <!-- android:onClick="Salir" -->

    </LinearLayout>
</android.gesture.GestureOverlayView>